feat: Add `BuildWaystoneSelectionMenuEvent`, refactor callsites to reduce duplicate code #1191