@@ -1,55 +1,21 @@
 package net.blay09.mods.waystones.menu;
 
-import com.mojang.datafixers.util.Either;
 import net.blay09.mods.balm.world.BalmMenuFactory;
 import net.blay09.mods.balm.world.inventory.BalmMenuTypeRegistrar;
 import net.blay09.mods.waystones.api.TeleportFlags;
 import net.blay09.mods.waystones.core.UserDecoratedWaystone;
 import net.minecraft.core.Holder;
 import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.Identifier;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.inventory.MenuType;
-import net.minecraft.world.item.ItemStack;
 
 import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
-import java.util.UUID;
+import java.util.function.Supplier;
 
 public class ModMenus {
-
-    public record ItemInitiatedWaystoneMenuData(List<UserDecoratedWaystone> waystones, ItemStack itemStack, Map<UUID, Either<List<Object>, List<Object>>> warpRequirements) {
-        public static final StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> STREAM_CODEC = StreamCodec.composite(
-                UserDecoratedWaystone.LIST_STREAM_CODEC,
-                ItemInitiatedWaystoneMenuData::waystones,
-                ItemStack.STREAM_CODEC,
-                ItemInitiatedWaystoneMenuData::itemStack,
-                WaystoneSelectionMenu.WARP_REQUIREMENTS_STREAM_CODEC,
-                ItemInitiatedWaystoneMenuData::warpRequirements,
-                ItemInitiatedWaystoneMenuData::new
-        );
-    }
-
-    public record WaystoneListMenuData(List<UserDecoratedWaystone> waystones, Map<UUID, Either<List<Object>, List<Object>>> warpRequirements, Optional<Identifier> waystoneKind) {
-        public static final StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> STREAM_CODEC = StreamCodec.composite(
-                UserDecoratedWaystone.LIST_STREAM_CODEC,
-                WaystoneListMenuData::waystones,
-                WaystoneSelectionMenu.WARP_REQUIREMENTS_STREAM_CODEC,
-                WaystoneListMenuData::warpRequirements,
-                ByteBufCodecs.optional(Identifier.STREAM_CODEC),
-                WaystoneListMenuData::waystoneKind,
-                WaystoneListMenuData::new
-        );
-
-        public WaystoneListMenuData(List<UserDecoratedWaystone> waystones, Map<UUID, Either<List<Object>, List<Object>>> warpRequirements) {
-            this(waystones, warpRequirements, Optional.empty());
-        }
-    }
 
     public static Holder<MenuType<WaystoneSelectionMenu>> waystoneSelection;
     public static Holder<MenuType<WaystoneSelectionMenu>> warpScrollSelection;
@@ -64,115 +30,14 @@ public class ModMenus {
     public static Holder<MenuType<PersonalWaystoneSettingsMenu>> personalWaystoneSettings;
 
     public static void initialize(BalmMenuTypeRegistrar menus) {
-        waystoneSelection = menus.register("waystone_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
-                        return new WaystoneSelectionMenu(ModMenus.waystoneSelection.value(),
-                                data.fromWaystone(),
-                                windowId,
-                                data.waystones(),
-                                data.warpRequirements(),
-                                Collections.emptySet());
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
-                        return WaystoneSelectionMenu.STREAM_CODEC;
-                    }
-                }).asHolder();
-        warpScrollSelection = menus.register("warp_scroll_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.warpScrollSelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Collections.emptySet())
-                                .withWarpItem(data.itemStack());
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                        return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        portalScrollSelection = menus.register("portal_scroll_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.portalScrollSelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Collections.emptySet())
-                                .withWarpItem(data.itemStack());
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                        return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        warpStoneSelection = menus.register("warp_stone_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.warpStoneSelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Collections.emptySet())
-                                .withWarpItem(data.itemStack());
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                        return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        portstoneSelection = menus.register("portstone_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneListMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneListMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.portstoneSelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Set.of(TeleportFlags.PORTSTONE), data.waystoneKind().orElse(null));
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> getStreamCodec() {
-                        return WaystoneListMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        inventorySelection = menus.register("inventory_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneListMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneListMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.inventorySelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Set.of(TeleportFlags.INVENTORY_BUTTON));
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> getStreamCodec() {
-                        return WaystoneListMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        adminSelection = menus.register("admin_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneListMenuData>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneListMenuData data) {
-                        return new WaystoneSelectionMenu(ModMenus.adminSelection.value(), null, windowId, data.waystones(), data.warpRequirements(), Set.of(TeleportFlags.ADMIN));
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> getStreamCodec() {
-                        return WaystoneListMenuData.STREAM_CODEC;
-                    }
-                }).asHolder();
-        sharestoneSelection = menus.register("sharestone_selection",
-                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
-                    @Override
-                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
-                        return new WaystoneSelectionMenu(ModMenus.sharestoneSelection.value(),
-                                data.fromWaystone(),
-                                windowId,
-                                data.waystones(),
-                                data.warpRequirements(),
-                                Collections.emptySet());
-                    }
-
-                    @Override
-                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
-                        return WaystoneSelectionMenu.STREAM_CODEC;
-                    }
-                }).asHolder();
+        waystoneSelection = registerWaystoneSelectionMenu(menus, "waystone_selection", () -> ModMenus.waystoneSelection, Collections.emptySet());
+        warpScrollSelection = registerWaystoneSelectionMenu(menus, "warp_scroll_selection", () -> ModMenus.warpScrollSelection, Collections.emptySet());
+        portalScrollSelection = registerWaystoneSelectionMenu(menus, "portal_scroll_selection", () -> ModMenus.portalScrollSelection, Collections.emptySet());
+        warpStoneSelection = registerWaystoneSelectionMenu(menus, "warp_stone_selection", () -> ModMenus.warpStoneSelection, Collections.emptySet());
+        portstoneSelection = registerWaystoneSelectionMenu(menus, "portstone_selection", () -> ModMenus.portstoneSelection, Set.of(TeleportFlags.PORTSTONE));
+        inventorySelection = registerWaystoneSelectionMenu(menus, "inventory_selection", () -> ModMenus.inventorySelection, Set.of(TeleportFlags.INVENTORY_BUTTON));
+        adminSelection = registerWaystoneSelectionMenu(menus, "admin_selection", () -> ModMenus.adminSelection, Set.of(TeleportFlags.ADMIN));
+        sharestoneSelection = registerWaystoneSelectionMenu(menus, "sharestone_selection", () -> ModMenus.sharestoneSelection, Collections.emptySet());
         waystoneModifiers = menus.register("waystone_modifiers",
                 new BalmMenuFactory<WaystoneModifierMenu, UserDecoratedWaystone>() {
                     @Override
@@ -207,6 +72,26 @@ public class ModMenus {
                     @Override
                     public StreamCodec<RegistryFriendlyByteBuf, UserDecoratedWaystone> getStreamCodec() {
                         return UserDecoratedWaystone.STREAM_CODEC;
+                    }
+                }).asHolder();
+    }
+
+    private static Holder<MenuType<WaystoneSelectionMenu>> registerWaystoneSelectionMenu(BalmMenuTypeRegistrar menus, String name, Supplier<Holder<MenuType<WaystoneSelectionMenu>>> menuType, Set<Identifier> flags) {
+        return menus.register(name,
+                new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
+                    @Override
+                    public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
+                        return new WaystoneSelectionMenu(menuType.get().value(),
+                                data.fromWaystone(),
+                                windowId,
+                                data.waystones(),
+                                data.warpRequirements(),
+                                flags);
+                    }
+
+                    @Override
+                    public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
+                        return WaystoneSelectionMenu.STREAM_CODEC;
                     }
                 }).asHolder();
     }
